Migrated project to Maven.